tests/sksl/errors/GrMainTooManyParameters.fp
void main(float2 coords, float2 extra) {
    sk_OutColor = half4(0);
}
